Fixed alignment issues

--- a/src/note-widget-collapsed.css
+++ b/src/note-widget-collapsed.css
@@ -1,6 +1,6 @@
 .collapsed-note-widget{
     display: grid;
-    grid-template-columns: 1fr auto 20px 20px;
+    grid-template-columns: 1fr auto auto auto;
     grid-template-areas: "title due-date past-due delete";
 
     gap: 12px;
@@ -31,10 +31,15 @@
 }
 .collapsed-note-widget .past-due{
     grid-area: past-due;
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
     border-radius: 50%;
     padding: 5px;
-    height: 15px;
-    width: 15px;
+    height: 30px;
+    width: 30px;
 }
 
 .collapsed-note-widget .delete-button{
@@ -42,6 +47,6 @@
 }
 
 .collapsed-note-widget img{
-    height: 15px;
-    width: 15px;
+    /* height: 15px;
+    width: 15px; */
 }
